--- a/adventOfCode2020/adventOfCode2020.vcxproj.filters
+++ b/adventOfCode2020/adventOfCode2020.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="day1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="day2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -31,6 +34,9 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="dataDay1.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="dataDay2.txt">
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
