--- a/adventOfCode2020/adventOfCode2020.vcxproj
+++ b/adventOfCode2020/adventOfCode2020.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClCompile Include="day1.cpp" />
     <ClCompile Include="day2.cpp" />
+    <ClCompile Include="day3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -163,6 +164,7 @@
   <ItemGroup>
     <Text Include="dataDay1.txt" />
     <Text Include="dataDay2.txt" />
+    <Text Include="dataDay3.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
